# Mythica

./: .dockerignore  CHANGELOG.md  README.md  docker-compose.yml  dockerfile  dockerfile.dev  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
ecosystem/catalog/: effects.py
ecosystem/core/: ability.py  creatures.py  ecosystem.py
ecosystem/core/context/: context_ability.py
ecosystem/utils/: __init__.py
examples/: abilities.yaml  example.py  example_abilities_from_yaml.py  example_mating_season.py
mythica/catalog/: __init__.py  abilities.py  creatures.py  effects.py
mythica/core/: ability.py  creatures.py  ecosystem.py
mythica/core/context/: context_ability.py
mythica/schema/: __init__.py  enums.py
mythica/utils/: ability_builder.py
tests/: conftest.py  test_01_creature.py  test_02_ability.py  test_03_creature_abilities.py  test_04_ecosystem.py
