[project]
name = "mythica"
version = "0.1.0"
description = "Lib for Simulation of fantasy ecosystems"
authors = [
    { name="John Frederick Knight Berra / FrederickKnight", email="infisefir@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["python","simulation","fantasy","creatures","abilities","ecosystems"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]
urls = { "Homepage" = "https://github.com/FrederickKnight/Mythica" }
dependencies = [
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]